--- a/src/config/mysql.properties
+++ b/src/config/mysql.properties
@@ -1,5 +1,5 @@
 className=org.mariadb.jdbc.Driver
-url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf-8
+url=jdbc:mariadb://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf-8
 user=root
 password=123456
 maxPool=10
